syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "distributor.loganalyzer.grpc";

// Define the LogMessage message
message LogMessage {
  // Define fields for the log message
  enum LogLevel {
    DEBUG = 0;
    INFO = 1;
    WARNING = 2;
    ERROR = 3;
  }

  LogLevel severity = 1;
  google.protobuf.Timestamp timestamp = 2;
  string message = 3;
}

// Define the LogPacket message
message LogPacket {
  // Define fields for the log packet
  repeated LogMessage logMessages = 1;
}

// Define the AnalysisResult message
message AnalysisResult {
  // Define fields for the analysis result
  bool success = 1;
  string message = 2;
  // Add more fields as needed
}

// Define the LogAnalyzerService service
service LogAnalyzerService {
  // Define the analyzeLog RPC method
  rpc analyzeLog(LogPacket) returns (AnalysisResult);
}
